packages/shulker-operator/src/reconcilers/minecraft_server_fleet/snapshots/shulker_operator__reconcilers__minecraft_server_fleet__config_map__tests__create_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server_fleet/config_map.rs
expression: config_map
---
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: minecraftserver
    app.kubernetes.io/name: my-server
    minecraftcluster.shulkermc.io/name: my-cluster
    minecraftserverfleet.shulkermc.io/name: my-server
  name: my-server-config
  namespace: default

